tests/snapshots/examples_fixtures/type_system__failing__100_unclosed_string_recovery.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/100_unclosed_string_recovery.flx
== compile ==
failed (parse)
== diagnostics ==
error[E071]: Unterminated String

String literal is missing closing quote.

  examples/type_system/failing/100_unclosed_string_recovery.flx:1:13
  |
1 | let label = "The answer
  |             ^^^^^^^^^^^

Hint:
  Add a closing " at the end of the string.
== stdout ==
<not executed>
